scrollbars and fix sorting for stat entry and transactions

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -90,10 +90,6 @@ a, a:focus, a:hover {
     text-decoration: none;
 }
 
-::-webkit-scrollbar { 
-    display: none; 
-}
-
 .carousel-indicators {
     li {
         background-color: rgba(0,0,0,0.5);
